Fixes WebVR presentation from within VRShell.

- VrShellDelegate delays the call of a successfull request present callback until the GL thread is ready.
- By doing so, VrShellDelegate is able to pass the VRSubmitFrameClient to the GL thread no matter if the Gl thread was ready at the time of the request.
- Previously, the VRSubmitFrameClient was only passed correctly if the GL thread was not ready at the time of the request. Thus, WebVR presentation crashed from within VRShell.

BUG=703324

Review-Url: https://codereview.chromium.org/2774933003
Cr-Commit-Position: refs/heads/master@{#462511}

Former-commit-id: 18732d771d2b10a39707d4bdda57e3a367dac55d